--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
